Se agregaron las instrucciones BALR y Add RX

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <link rel="manifest" href="manifest.json">
   <link rel="canonical" href="https://start-polymer3.firebaseapp.com/" />
   <script src="./node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js" async></script>
-  <script src="./src/start-polymer3.js" type="module" async></script>
-  <title>Start Polymer 3.0</title>
+  <script src="./src/ibm-360-vm.js" type="module" async></script>
+  <title>IBM 360 VM</title>
 </head>
 <body>
-  <start-polymer3>
+  <ibm-360-vm>
     <!-- 
       Placeholder Content: This content will be replaced when <start-polymer3>
       is rendered.
@@ -31,7 +31,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       users with JavaScript disabled will see something helpful.
     -->
 
-    <h1>Start Polymer 3.0</h1>
+    <h1>Start IBM 360 VM</h1>
     <p id="jsyes"></p>
     <script type="text/javascript">
       document.getElementById('jsyes').innerHTML='Loading...'
@@ -39,6 +39,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <noscript>
       <p>Could not render the custom element. Check that JavaScript is enabled.</p>
     </noscript>
-  </start-polymer3>
+  </ibm-360-vm>
 </body>
 </html>
